<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  style="@style/Activity">

  <RelativeLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
    android:layout_margin="@dimen/small_pad">

      <EditText
          android:id="@+id/release_barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
      android:layout_toRightOf="@+id/barcode_label"
        android:layout_toEndOf="@+id/barcode_label"
        android:inputType="number" />

      <EditText
          android:id="@+id/barcode_search"
          style="@style/SearchEdit"
          android:layout_below="@id/release_barcode"
          android:layout_toLeftOf="@id/barcode_search_btn"
          android:layout_alignBottom="@id/barcode_search_btn"
          android:hint="@string/barcode_hint"
          android:layout_alignStart="@id/release_barcode"
          android:layout_alignLeft="@id/release_barcode"
          android:layout_toStartOf="@id/barcode_search_btn" />

      <ImageButton
      android:id="@+id/barcode_search_btn"
      style="@style/SearchButton"
      android:layout_alignParentRight="true"
          android:layout_below="@id/release_barcode"
        android:layout_alignParentEnd="true" />

    <org.metabrainz.mobile.view.RobotoLightTextView
      android:id="@+id/release_label"
      style="@style/Wrap"
      android:text="@string/barcode_release_text"
      android:textSize="@dimen/text_size_medium"
      android:layout_marginLeft="@dimen/std_pad"
      android:layout_marginRight="@dimen/std_pad"
        android:layout_alignBaseline="@+id/barcode_search"
        android:layout_marginStart="@dimen/std_pad"
        android:layout_marginEnd="@dimen/std_pad" />

      <org.metabrainz.mobile.view.RobotoLightTextView
          android:id="@+id/barcode_label"
          style="@style/Wrap"
          android:text="@string/barcode_text"
          android:textSize="@dimen/text_size_medium"
          android:layout_marginLeft="@dimen/std_pad"
          android:layout_marginRight="@dimen/std_pad"
          android:layout_alignBaseline="@+id/release_barcode"
          android:layout_marginStart="@dimen/std_pad"
          android:layout_marginEnd="@dimen/std_pad" />
  </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <View
      android:id="@+id/topline"
      style="@style/Separator"
      android:layout_alignParentTop="true" />

    <ListView
      android:id="@+id/barcode_list"
      style="@style/ListDefaultDivider"
      android:layout_below="@+id/topline"
      android:visibility="invisible" />

    <TextView
      android:id="@+id/barcode_instructions"
      style="@style/BarcodeInstructions"
      android:layout_below="@+id/topline"
      android:layout_alignParentBottom="true" />

    <LinearLayout
      android:id="@+id/loading"
      style="@style/Loading"
      android:visibility="invisible"
      android:layout_below="@+id/topline">

      <ProgressBar
        style="@style/Wrap"
        android:indeterminateDrawable="@anim/main_progress" />
    </LinearLayout>

    <TextView
      android:id="@+id/noresults"
      style="@style/NoResultsText"
      android:layout_below="@+id/topline"
      android:layout_alignParentBottom="true" />

    <include
      android:id="@+id/error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
      layout="@layout/layout_retry"
      android:layout_below="@+id/topline"
      android:visibility="gone" />
  </RelativeLayout>
</LinearLayout>